--- a/split-easy/package.json
+++ b/split-easy/package.json
@@ -1,1 +1,8 @@
-{"name":"split-easy","version":"1.0.0","dependencies":{"next-themes":"^0.4.6"}}
+{
+  "name": "split-easy",
+  "version": "1.0.0",
+  "dependencies": {
+    "next-themes": "^0.4.6",
+    "vite": "^6.3.5"
+  }
+}
