--- a/split-easy/package.json
+++ b/split-easy/package.json
@@ -1,8 +1,12 @@
 {
   "name": "split-easy",
   "version": "1.0.0",
+  "type": "module",
   "dependencies": {
     "next-themes": "^0.4.6",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0"
   }
 }
