--- a/split-easy/tsconfig.json
+++ b/split-easy/tsconfig.json
@@ -27,5 +27,6 @@
     }
   },
   "include": ["src"],
+  "exclude": ["src/supabase/functions/server/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
